# hocl

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO  VERSION  config  config.local  configure  dune-project  hocl.opam
doc/: grammar.html  syntax.html
doc/lrm/: Makefile  abssyn.tex  grammar-defns.sty  grammar.tex  hocl-lrm.tex  introduction.tex  overview.tex  semabbrev.sty  syntax.tex  typing.tex
doc/lrm/sav/: grammar-defns.sty
examples/: Makefile.app  Preesm.howto  do_test  do_tests  do_tests1
examples/interactive/: Makefile  test1.hcl  test2.hcl  test3.hcl
examples/working/: Makefile
examples/working/jfla/: Readme.md
examples/working/preesm/: HOWTO  Readme.md
examples/working/shuffle/: Makefile  main.hcl  shuffle.hcl
lib/: Makefile
lib/etc/: Makefile.app  Makefile.templ
lib/hocl/: prelude.hcl  stdlib.hcl
lib/preesm/: .project.templ
lib/systemc/: bcast.h  defs.h  delay.h  hocl.h  merge.h  param_in.h  sc_int_io.h  static_delay.h  stream_in.h  stream_out.h  switch.h
src/: Makefile  _tags  backend.ml  builtins.ml  compiler.ml  dif.ml  dot.ml  dune  error.ml  eval.ml  eval_fun.ml  eval_struct.ml  interm.ml  lexer.mll  location.ml  logfile.ml  main.ml  misc.ml  options.ml  parser.mly  pr_type.ml  preesm.ml  semval.ml  ssval.ml  static.ml  syntax.ml  systemc.ml  toplevel.ml  types.ml  typing.ml  version.ml  xdf.ml
tools/pi2hcl/: .merlin  .ocamlinit  Makefile  dot.ml  dune  hcl.ml  ir.ml  main.ml  misc.ml
tools/pi2hcl/examples/: Makefile  bcast.names  bcast.pi  hier_sub.names  hier_sub.pi  hier_top.names  (+6 more)
tools/yuvutils/: Makefile
(+599 files in other folders)
