(env
  (dev
    (flags (:standard -bin-annot))))

(ocamllex lexer)

(menhir
  (modules parser)
  (flags (--explain)))

(executable
  (name main)
  (modes byte native)
  (flags (:standard -w -9-26-27-35-39) (-bin-annot))
  (libraries ezxmlm unix))

(rule
  (targets grammar.html)
  (deps parser.mly)
  (mode promote)
  (action (run obelisk html -i -o %{targets} %{deps})))

(rule
  (targets grammar.tex grammar-defns.sty)
  (deps parser.mly)
  (mode promote)
  (action (run obelisk latex -i -o grammar.tex -package grammar-defns parser.mly)))


